<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>

     <parent>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-parent</artifactId>
          <version>3.5.8</version>
          <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>spring-jpa-books</artifactId>

     <version>1.0</version>
     <name>spring-jpa-books</name>
     <description>Demo project for Spring Boot</description>

     <properties>
          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
          <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
          <java.version>21</java.version>
          <maven.compiler.source>${java.version}</maven.compiler.source>
          <maven.compiler.target>${java.version}</maven.compiler.target>
          <maven.compiler.release>${java.version}</maven.compiler.release>
     </properties>

     <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-security</artifactId>
          </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-thymeleaf</artifactId>
          </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-validation</artifactId>
          </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-web</artifactId>
          </dependency>
          <dependency>
               <groupId>org.flywaydb</groupId>
               <artifactId>flyway-core</artifactId>
          </dependency>
          <dependency>
               <groupId>org.flywaydb</groupId>
               <artifactId>flyway-mysql</artifactId>
          </dependency>
          <dependency>
               <groupId>org.thymeleaf.extras</groupId>
               <artifactId>thymeleaf-extras-springsecurity6</artifactId>
          </dependency>

          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-docker-compose</artifactId>
               <scope>runtime</scope>
               <optional>true</optional>
          </dependency>
          <dependency>
               <groupId>com.mysql</groupId>
               <artifactId>mysql-connector-j</artifactId>
               <scope>runtime</scope>
          </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-starter-test</artifactId>
               <scope>test</scope>
          </dependency>
          <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-testcontainers</artifactId>
               <scope>test</scope>
          </dependency>
          <dependency>
               <groupId>org.springframework.security</groupId>
               <artifactId>spring-security-test</artifactId>
               <scope>test</scope>
          </dependency>
          <dependency>
               <groupId>org.testcontainers</groupId>
               <artifactId>junit-jupiter</artifactId>
               <scope>test</scope>
          </dependency>
          <dependency>
               <groupId>org.junit.platform</groupId>
               <artifactId>junit-platform-suite-engine</artifactId>
          </dependency>
          <dependency>
               <groupId>org.testcontainers</groupId>
               <artifactId>mysql</artifactId>
               <scope>test</scope>
          </dependency>
     </dependencies>

     <build>
          <finalName>bookstore-app</finalName>
          <plugins>
               <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
               <!-- Plugin for running unit tests -->
               <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version> <!-- Use the latest version -->
                    <configuration>
                         <includes>
                              <include>**/com.example.books.AllTestsSuite.class</include>
                         </includes>
                    <!--Se quiser Reportar no com.example.Clazz.txt os nomes dos @Test methods-->
                    <!--https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#reportFormat-->
                         <reportFormat>plain</reportFormat>
                         <argLine>-Djdk.instrument.traceUsage=false -XX:+EnableDynamicAgentLoading</argLine>
                         <argLine>
                              -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                              -Xshare:off
                         </argLine>
                    </configuration>
               </plugin>
          </plugins>
     </build>
</project>
